[project]
name = "energy-based-am-presentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
